<resources>
    <string name="app_name">HammerSystemsTestTask</string>
    <string name="group_pizza">Пицца</string>
    <string name="group_combo">Комбо</string>
    <string name="group_desserts">Десерты</string>
    <string name="group_drinks">Напитки</string>
    <string name="group_rolls">Роллы</string>
    <string name="group_salads">Салаты</string>
    <string name="city_moscow">Москва</string>
    <string name="product_item_price_example">от 300 р</string>
    <string name="product_item_description_example">Описание Мега бургера</string>
    <string name="product_item_title_example">Мега бургер</string>
    <string name="product_item_price">от %1s р</string>
    <string name="action_menu_title">Меню</string>
    <string name="action_profile_title">Профиль</string>
    <string name="action_basket_title">Корзина</string>
    <string name="activity_isnt_navigation_router_provider_error_msg">MainActivity должна имплементировать NavigationRouterProvider</string>
    <string name="alert_message_if_internet_is_off">Проверьте подключение к WI-FI или сотовой сети</string>
    <string name="alert_title_if_internet_is_off">Отсутствует интернет-соединение</string>
    <string name="default_alert_positive_button">OK</string>
</resources>