<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/product_item_height"
    app:cardElevation="@dimen/zero">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/default_layout_padding"
        android:paddingTop="@dimen/default_layout_padding">

        <ImageView
            android:id="@+id/product_item_photo_image_view"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/zero"
            android:layout_marginBottom="@dimen/default_layout_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="H, 1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/product_item_title_text_view"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_layout_padding"
            android:autoSizeTextType="uniform"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintStart_toEndOf="@id/product_item_photo_image_view"
            app:layout_constraintTop_toTopOf="@id/product_item_photo_image_view"
            tools:text="@string/product_item_title_example" />

        <TextView
            android:id="@+id/product_item_description_text_view"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/zero"
            android:layout_marginStart="@dimen/default_layout_padding"
            android:layout_marginTop="@dimen/default_layout_padding"
            android:ellipsize="end"
            android:maxLines="3"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBottom_toTopOf="@id/product_item_price_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/product_item_photo_image_view"
            app:layout_constraintTop_toBottomOf="@id/product_item_title_text_view"
            app:layout_constraintVertical_bias="0"
            tools:text="@string/product_item_description_example" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/product_item_price_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_layout_padding"
            android:layout_marginBottom="@dimen/default_layout_padding"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:strokeColor="@color/app_primary"
            app:strokeWidth="@dimen/price_stroke_width"
            tools:text="@string/product_item_price_example" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/product_item_divider_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_gravity="bottom"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</com.google.android.material.card.MaterialCardView>